--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
+    "mogoose": "0.0.1-security",
+    "mongoose": "^6.0.11",
     "morgan": "^1.10.0"
   }
 }
